add inventory p1 goods cover and semantic governance